--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.github.songdongsheng</groupId>
   <artifactId>identifier</artifactId>
   <name>Trend sorted identifier</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <packaging>jar</packaging>
 
@@ -100,7 +100,9 @@
   </dependencies>
 
   <build>
+    <!--
     <finalName>${project.groupId}.${project.artifactId}-${project.version}</finalName>
+      -->
 
     <plugins>
       <plugin>
@@ -119,6 +121,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>${maven.jar.version}</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${maven.javadoc.version}</version>
       </plugin>
 
       <plugin>
@@ -190,12 +198,6 @@
 
   <reporting>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${maven.javadoc.version}</version>
-      </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jxr-plugin</artifactId>
