--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.github.songdongsheng</groupId>
   <artifactId>identifier</artifactId>
   <name>Trend sorted identifier</name>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
 
   <packaging>jar</packaging>
 
@@ -100,9 +100,7 @@
   </dependencies>
 
   <build>
-    <!--
     <finalName>${project.groupId}.${project.artifactId}-${project.version}</finalName>
-      -->
 
     <plugins>
       <plugin>
