--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>com.github.songdongsheng</groupId>
   <artifactId>identifier</artifactId>
   <name>Trend sorted identifier</name>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0</version>
 
   <packaging>jar</packaging>
 
@@ -64,8 +64,8 @@
         -->
 
     <logback.version>1.2.3</logback.version>
-    <maven.compiler.version>3.6.1</maven.compiler.version>
-    <maven.dependency.version>3.0.1</maven.dependency.version>
+    <maven.compiler.version>3.7.0</maven.compiler.version>
+    <maven.dependency.version>3.0.2</maven.dependency.version>
     <maven.gpg.version>1.6</maven.gpg.version>
     <maven.jar.version>3.0.2</maven.jar.version>
     <maven.javadoc.version>2.10.4</maven.javadoc.version>
@@ -73,11 +73,11 @@
     <maven.pmd.version>3.8</maven.pmd.version>
     <maven.pir.version>2.9</maven.pir.version>
     <maven.release.version>2.5.3</maven.release.version>
-    <maven.shade.version>3.0.0</maven.shade.version>
+    <maven.shade.version>3.1.0</maven.shade.version>
     <maven.site.version>3.6</maven.site.version>
     <maven.source.version>3.0.1</maven.source.version>
-    <maven.sr.version>2.20</maven.sr.version>
-    <mockito.version>2.8.47</mockito.version>
+    <maven.sr.version>2.20.1</maven.sr.version>
+    <mockito.version>2.12.0</mockito.version>
     <jmh.version>1.19</jmh.version>
     <slf4j.api.version>1.7.25</slf4j.api.version>
     <nexus.version>1.6.8</nexus.version>
